[package]
name = "vr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
bytes = "1"
anyhow = "1.0.100"
